<?xml version="1.0" encoding="utf-8"?>
<!-- 我要推荐 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="663dip"
    android:layout_height="423dip"
    android:padding="7dip" >

    <!-- 标题 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/popu_myrecommend_title"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:gravity="center_vertical"
            android:text="@string/person_recommend"
            android:textColor="#0088e5"
            android:textSize="22sp" />
    </LinearLayout>

    <!-- 内容 -->

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingBottom="100dip"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
        android:paddingTop="100dip" >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/person_recommend_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/popu_myrecommend_edit"
            android:gravity="center_vertical"
            android:hint="@string/person_recommend_hint"
            android:padding="10dip"
            android:textColor="#4d4d4d"
            android:textColorHint="#5e5d5d"
            android:textSize="24sp" />
    </LinearLayout>

    <!-- 按钮组 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dip"
            android:background="@drawable/btn_commons"
            android:text="@string/btn_cancel"
            android:textColor="@color/btn_dialogs"
            android:textSize="24sp" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:background="@drawable/btn_commons"
            android:text="@string/btn_ok"
            android:textColor="@color/btn_dialogs"
            android:textSize="24sp" />
    </LinearLayout>

</RelativeLayout>