<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homeRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/homeBottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="15dip"
        android:paddingLeft="30dip"
        android:paddingRight="30dip" >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_mysites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:background="#00000000"
                android:text="@string/my_navigation"
                android:textColor="#4CA0EA"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_allsites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:background="#00000000"
                android:text="@string/site_navigation"
                android:textColor="#7E7E7E"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:id="@+id/line_bottom"
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:layout_below="@id/linearLayout"
            android:background="@drawable/line_bottom" />

        <ImageView
            android:id="@+id/line_bottom_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/line_bottom"
            android:background="@drawable/line_bottom_scroll"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/line_bottom"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_nexts"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/homeFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/homeBottomLayout" >
    </android.support.v4.view.ViewPager>

</RelativeLayout>